# youtube-audio-player-gui

./: Cargo.toml  README.md
src/: main.rs
src/widgets/: mod.rs
src/widgets/control_widget/: mod.rs
src/widgets/music_widget/: mod.rs
src/widgets/playlist_widget/: mod.rs
src/widgets/power_menu_widget/: mod.rs
src/widgets/queue_widget/: mod.rs
src/widgets/song_widget/: mod.rs
src/widgets/volume_widget/: mod.rs
src/widgets/yap_widget/: main.css  mod.rs
src/yap_cli/: mod.rs  yap_cli.rs
