[package]
name = "yap-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
relm4 = "0.7.0-alpha.1"
relm4-components = "0.7.0-alpha.1"
glib = "0.18"
glib-sys = "0.18"
gdk = { package = "gdk4", version = "0.7" }
gtk = { package = "gtk4", version = "0.7" }
gtk4-layer-shell = "0.2.0"
gdk-pixbuf = "0.18"
confy = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
